--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="./assets/style.css" />
   </head>
   <body>
+    
     <div class="wrapper">
       <header>
         <h1>Password Generator</h1>
@@ -16,6 +17,15 @@
           <h2>Generate a Password</h2>
         </div>
         <div class="card-body">
+        <label for="length">Password Length (8-128): </label>
+          <input
+          type="number"
+          id="length"
+          name="length"
+          min="8"
+          max="128"
+          value="8"
+        />
           <textarea
             readonly
             id="password"
